<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary"
    android:padding="25dp"
    >


    <TextView
        android:id="@+id/total_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:textColor="@color/txtColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"
        android:textColor="@color/txtColor"
        android:layout_marginTop="150dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_above="@+id/choices"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/choices"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="30dp"
        >

        <Button
            android:id="@+id/ans_a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/choice1"
            android:textColor="@color/txtColor"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/ans_b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/choice2"
            android:textColor="@color/txtColor"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/ans_c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/choice3"
            android:textColor="@color/txtColor"
            android:textSize="18sp"/>
        <Button
            android:id="@+id/ans_d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/choice4"
            android:textColor="@color/txtColor"
            android:textSize="18sp"/>



    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="25dp">
        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:backgroundTint="@color/btnColor"
            android:textColor="@color/txtColor"
            android:layout_alignParentBottom="true"
            android:textSize="18sp"


            />
    </RelativeLayout>

</RelativeLayout>